@@ -77,8 +77,9 @@ You can set a port that is different from the global port setting,
 e.g. "localhost:6602".  IPv6 addresses must be enclosed in square
 brackets if you want to configure a port, e.g. "[::1]:6602".
 
-To bind to a Unix domain socket, specify an absolute path.  For a
-system-wide MPD, we suggest the path "\fB/var/run/mpd/socket\fP".
+To bind to a Unix domain socket, specify an absolute path or a path starting
+with a tilde (~).  For a system-wide MPD, we suggest the path
+"\fB/var/run/mpd/socket\fP".
 .TP
 .B port <port>
 This specifies the port that mpd listens on.  The default is 6600.
