@@ -72,6 +72,14 @@ config_get_string(enum ConfigOption option, const char *default_value);
 Path
 config_get_path(enum ConfigOption option, Error &error);
 
+/**
+ * Parse a configuration parameter as a path.
+ * If there is a tilde prefix, it is expanded. If the path could
+ * not be parsed, returns Path::Null() and sets the error.
+ */
+Path
+config_parse_path(const struct config_param *param, Error & error_r);
+
 gcc_pure
 unsigned
 config_get_unsigned(enum ConfigOption option, unsigned default_value);
